src/test/deca/context/valid/valid_essentiel/decl_method.deca
// Description:
//    Programme de test de declaration des méthodes de classes.
//

class A {
	void m(){}
	int p(){}
	float q(int i, float f){}
}

class B extends A {
	void r(){}
	float q(int i, float f){}	
}